# covid19-scraping-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  inspections_summary.json  last_update.json  main_summary.json  patients_summary.json
.github/workflows/: update-data.yml
data/: inspections_summary.json  last_update.json  main_summary.json  patients_summary.json
docs/: credits.md
src/: errors.rs  generates.rs  main.rs  structs.rs  utils.rs
src/errors/: incorrect_format_error.rs
src/generates/: inspections_summary_generate.rs  json.rs  main_summary_generate.rs  news_generate.rs  patients_generate.rs  patients_summary_generate.rs
src/generates/json/: jsonize_main_summary_generate.rs  jsonize_patients_generate.rs  jsonize_summary_generate.rs
src/structs/: json.rs  last_update.rs  main_summary.rs  news.rs  patient.rs  sumdata.rs  summary.rs
src/structs/json/: jsonize_main_summary.rs  jsonize_patient.rs  jsonize_sumdata.rs  jsonize_summary.rs  patients.rs
src/utils/: date_format.rs  merge_age_and_gender.rs
