[package]
name = "covid19-scraping-rust"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.18.0", features = ["dates"] }
clap = { version = "3.0.13", features = ["derive"] }
chrono = "0.4.19"
imap = "2.4.1"
mail-parser = "0.4.4"
native-tls = "0.2.8"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
